--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "5.1.3",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-bootstrap": "^2.1.2",
+    "react-dom": "17.0.2",
+    "sass": "^1.49.8"
   },
   "devDependencies": {
     "eslint": "8.9.0",
